--- a/main.css
+++ b/main.css
@@ -176,10 +176,10 @@ div {
     font-family: sans-serif; font-weight: bold;
 }
 
-#div.devices{
+/*#div.devices{
     font-size: 20px ;
     font-family: sans-serif;
-}
+}*/
 
 #div.repairs{
     font-size: 20px ;
