--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 */
 
 .header-img {
-  width: 80%;
+  width: 100%;
   height: 200px;
   background: ("colored-logo.png");
   background-size: cover;
@@ -79,7 +79,7 @@ ul.topnav li a.active {
 ul.topnav li.right {
     float: right;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 100px) {
     ul.topnav li.right,
     ul.topnav li {
         float: none;
@@ -94,7 +94,7 @@ ul.topnav li.right {
     overflow: hidden;
     z-index: 2;
 }
-.logo {
+/*.logo {
     font-family: arial;
     text-decoration: none;
     line-height: 1;
@@ -106,7 +106,7 @@ ul.topnav li.right {
     display: block;
     position: absolute;
     top: 17px;
-}
+}*/
 .center {
   display: block;
   margin-left: auto;
