--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body {
     font: 20px arial, sans-serif;
     color: black;
     font-weight:bold;
+    position: relative;
 }
 H1{
     float: inherit;
