--- a/main.css
+++ b/main.css
@@ -55,8 +55,8 @@ section {
 */
 ul.topnav {
     list-style-type: none;
-    /*margin: 0;
-    padding: 0;*/
+    margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: none;
 }
