--- a/main.css
+++ b/main.css
@@ -21,6 +21,8 @@ body {
     color: black;
     font-weight:bold;
     position: relative;
+    margin: 10;
+    padding: 10;
 }
 H1{
     float: inherit;
