--- a/main.css
+++ b/main.css
@@ -10,48 +10,52 @@
     Filename: main.css
 */
 
-.header-img {
+.header-img 
+{
   width: 100%;
   height: 200px;
   background: ("colored-logo.png");
   background-size: cover;
 }
-body {
+body 
+{
     font: 20px arial, sans-serif;
     color: black;
     font-weight:bold;
         
 }
-H1{
+H1
+{
     float: inherit;
     color: black;
     font:40px cursive, courier;
     text-shadow: 2px 2px #FF00FF;
     
 }
-H2{
-    
-    float: center;
+H2
+{
+   float: center;
     font: 24px arial, sans-serif;
     color: black;
     text-shadow: 2px 2px #FF00FF;
-    /*width:auto;*/
-}
-H3{
+ }
+H3
+{
     float:right;
     font: 28px arial, sans-serif;
     color: black;
     text-shadow: 3px 3px #FF00FF;
 }
 
-ul.topnav {
+ul.topnav 
+{
     list-style-type: none;
-    
     overflow: hidden;
-    background-color: none;
+    /*background-color: none;*/
 }
 
-ul.topnav li a {
+ul.topnav li a 
+{
     float: left;
     display: block;
     color: #00ffff;
@@ -59,52 +63,29 @@ ul.topnav li a {
     padding: 10px 12px;
     text-decoration: none;
 }
-/*ul.topnav li a:hover:not(.active) {
-    background-color: #111;
-}
-ul.topnav li a.active {
-    background-color: #CCCCCC;
-    color: #333
-}
-ul.topnav li.right {
-    float: right;
-}
-@media screen and (max-width: 100px) {
-    ul.topnav li.right,
-    ul.topnav li {
-        float: none;
-    }
-}
-.top {
-    position: relative;
-    background-color: none;
-    height: 40px;
-    /*padding-top: 20px;*/
-    line-height: 50px;
-    overflow: hidden;
-    z-index: 2;
-}*/
-
-.center {
+/*.center 
+{
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
-.topnav {
+}*/
+.topnav 
+{
     position: fixed;
     z-index: 2;
     font-size: 17px;
     background-color: plum;
-    color: darkgray;
+    /*color: darkgray;
     width: 100%;
-    padding: 0;
+    padding: 0;*/
     letter-spacing: 1px;
     text-align: center;
     float: left;
     top: 0;
 }
-.top .logo {
+/*.top .logo 
+{
     position: relative;
     top: 0;
     width: 100%;
@@ -134,5 +115,5 @@ div {
 }
 img{
     position: right;
-}
+}*/
 
