--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ ul.topnav li a
     float: left;
     top: 0;
 }
-/*.top .logo 
+.top .logo 
 {
     position: relative;
     top: 0;
@@ -115,5 +115,5 @@ div {
 }
 img{
     position: right;
-}*/
+}
 
